Version 2.2.007
    Compatibility with the 1.20.5 / 1.20.6 MC Update
    Fixed bug where Alchemy was not brewing certain potions (haste, etc)
    Fixed bug where the probability of success of Graceful Roll was not being calculated correctly
    Added armadillo to combat experience in experience.yml
    Fixed bug where Green Thumb did not replant if seed was in the off hand

    NOTES:
    I did my best to keep mcMMO compatible with older versions of Minecraft for this update.
    This update to MC was quite large, with breaking changes to a lot of code relating to Alchemy, and some other things.
    I expect there to be bugs, please report them on GitHub or Discord, but preferably GitHub.
    I will be working on fixing these bugs as they come in, so please be patient.
Version 2.2.006
    Added new config custom_item_support.yml
    Added support for hex color codes in the locale file, uses the format &#RRGGBB (see notes)
    Added setting to disable repair on items with custom models, this is not on by default
    Fixed a bug where sometimes the locale name of a skill would get lowercased
    Fixed a bug where JSON text components did not get colored properly some of the time
    Fixed en_US locale string 'Commands.Skill.Leaderboard' not being colored properly
    Fixed skill commands incorrectly telling you to use their locale name, this isn't currently possible
    Updated outdated wiki URLs in commands to point to the new wiki
    Removed the msg about skills being migrated to a new system when using /mmoinfo command
    Added new locale entry 'Anvil.Repair.Reject.CustomModelData'
    Added new locale entry 'Anvil.Salvage.Reject.CustomModelData'
    Updated en_US locale entry 'JSON.DescriptionHeader'
    (API/Codebase) Added some util methods and basic unit tests for LocaleLoader

    NOTES:
    Hex Color support in locale files is here!
    The hex color code format for the locale files is &#RRGGBB